--- a/package.json
+++ b/package.json
@@ -9,14 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/server": "^11.4.0",
+    "@next-auth/prisma-adapter": "^0.5.2-next.19",
+    "@prisma/client": "^3.5.0",
+    "@radix-ui/react-accordion": "^0.1.1",
+    "@radix-ui/react-alert-dialog": "^0.1.1",
+    "@radix-ui/react-avatar": "^0.1.1",
+    "@radix-ui/react-checkbox": "^0.1.1",
+    "@radix-ui/react-dialog": "^0.1.1",
+    "@radix-ui/react-tabs": "^0.1.1",
+    "@radix-ui/react-tooltip": "^0.1.1",
+    "@workos-inc/node": "^2.2.0",
+    "framer-motion": "^5.3.3",
     "next": "12.0.4",
+    "next-auth": "^4.0.0-beta.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.2",
+    "react-hot-toast": "^2.1.1",
+    "react-query": "^3.33.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/react": "17.0.37",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "autoprefixer": "^10.4.0",
+    "babel-plugin-superjson-next": "^0.4.2",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "postcss": "^8.4.1",
+    "prisma": "^3.5.0",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   }
 }
